# instant-python

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  codeql-config.yml  configuration_template.yml  index.html  makefile  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.agents/agents/: convention_keeper.md  craftsman_leader.md  judge.md  spec_partner.md  tdd_craftsman.md
.agents/commands/: code_review.md  commit.md
.github/: dependabot.yml
.github/workflows/: bump.yml  (+7 more)
contributing/: index.html
docs/: getting_started.md  index.md  summary.md
getting-started/: index.html
guide/: index.html
home/: index.html
instant_python/: cli.py  folder_cli.py  intant_python_typer.py  project_cli.py
instant_python/templates/boilerplate/: .gitignore  .pre-commit-config.yml  README.md  action.yml  aggregate_root.py  domain_event_json_deserializer.py  domain_event_json_serializer.py  domain_event_subscriber.py  event_bus.py  incorrect_value_type_error.py  invalid_negative_value_error.py  makefile  mkdocs.yml  pyproject.toml  rabbit_mq_configurer.py  rabbit_mq_connection.py  rabbit_mq_consumer.py  rabbit_mq_queue_formatter.py  random_generator.py  required_value_error.py  session_maker.py  sqlalchemy_repository.py  string_value_object.py  uuid.py
instant_python/templates/boilerplate/agents/: AGENTS.md  convention_guidelines.md  design-doc-guidelines.md  leader_workflow.md  tasks.json  tdd_outside_in.md
instant_python/templates/boilerplate/agents/agents/: convention_keeper.md  craftsman_leader.md  judge.md  spec_partner.md  tdd_craftsman.md
instant_python/templates/boilerplate/agents/commands/: technical_debt_review.md
instant_python/templates/boilerplate/agents/skills/hamburger_method/: REFERENCE.md
instant_python/templates/boilerplate/agents/skills/micro-steps-coach/: REFERENCE.md
instant_python/templates/boilerplate/agents/skills/micro_steps_coach/: REFERENCE.md  SKILL.md
instant_python/templates/boilerplate/agents/skills/spec/: SKILL.md
instant_python/templates/boilerplate/agents/skills/test_desiderata/: SKILL.md
instant_python/templates/boilerplate/agents/skills/xp_refactor/: SKILL.md
instant_python/templates/boilerplate/event_bus/: domain_event_json_deserializer.py  exchange_type.py  mock_event_bus.py
instant_python/templates/boilerplate/exceptions/: domain_event_type_not_found_error.py  incorrect_value_type_error.py  invalid_id_format_error.py  invalid_negative_value_error.py  rabbit_mq_connection_not_established_error.py  required_value_error.py
instant_python/templates/boilerplate/fastapi/: application.py  http_response.py  success_response.py
instant_python/templates/boilerplate/github/: action.yml  ci.yml  dependabot.yml  pages.yml  release.yml  test_lint.yml
instant_python/templates/boilerplate/logger/: logger.py
instant_python/templates/boilerplate/persistence/: alembic_migrator.py
instant_python/templates/boilerplate/persistence/async/: async_engine_fixture.py  async_session.py  env.py  models_metadata.py  sqlalchemy_repository.py
instant_python/templates/boilerplate/scripts/: integration.sh  makefile  unit.sh
instant_python/templates/boilerplate/value_object/: int_value_object.py  uuid.py  value_object.py
scripts/: local_setup.py
search/: search_index.json
src/: cli.py
src/templates/boilerplate/: pyproject.toml
src/templates/boilerplate/event_bus/: rabbit_mq_event_bus.py
src/templates/boilerplate/fastapi/: application.py  lifespan.py
test/: random_generator.py
welcome/: index.html
(+448 files in other folders)
