[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-python"
version = "0.8.0"
description = "Python automatic project generator"
readme = "README.md"
license = {text = "{{ license }}", file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "sphinx-wagtail-theme>=6.4.0",
    "typer>=0.15.1",
    "jinja2>=3.1.5",
    "questionary>=2.1.0",
    "commitizen>=4.2.2",
]

[project.scripts]
instant-python = "instant_python.cli:app"
