[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-python"
version = "0.8.1"
description = "Python automatic project generator"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "dimanu-py", email = "diegomtz126@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
    "jinja2>=3.1.5",
    "questionary>=2.1.0",
]

[project.scripts]
instant-python = "instant_python.cli:app"

[dependency-groups]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-wagtail-theme>=6.5.0",
]
git = [
    "commitizen>=4.2.2",
]
