[project]
name = "{{ project_name }}"
version = "{{ version }}"
description = "{{ description }}"
{% if dependency_manager == "pdm" %}
authors = [{name = "{{ github_username }}", email = "{{ github_email }}"}]
{% endif %}
{% if default_dependencies in ["yes", "y"] %}
dependencies = [
    "sqlalchemy>=2.0.36"
]
{% else %}
dependencies = []
{% endif %}
requires-python = "=={{ python_version }}.*"
readme = "README.md"
license = {text = "{{ license }}", file = "LICENSE"}

{% if dependency_manager == "pdm" %}
[tool.pdm]
distribution = false
{% endif %}

{% if default_dependencies %}
[dependency-groups]
test = [
    "coverage>=7.6.9",
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "pytest>=8.3.4",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
]
lint = [
    "mypy>=1.13.0",
    "ruff>=0.8.3",
]
{% endif %}